<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightsActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:textSize="20sp"
            android:text="@string/weights1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/bal850"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:textSize="20sp"
            android:id="@+id/waga_bal_850"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/bal550"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:textSize="20sp"
            android:id="@+id/waga_bal_550"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/orzech"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:textSize="20sp"
            android:id="@+id/waga_orz"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/wil"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:textSize="20sp"
            android:id="@+id/waga_wil"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/slone"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:textSize="20sp"
            android:id="@+id/waga_slo"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/wielo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:textSize="20sp"
            android:id="@+id/waga_wie"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/sta"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:textSize="20sp"
            android:id="@+id/waga_sta"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/kilo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:textSize="20sp"
            android:id="@+id/waga_kilo"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:text="@string/raz"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:textSize="20sp"
            android:id="@+id/waga_raz"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>